# galactorian

./: Cargo.toml  README.md
assets/: config.toml
src/: errors.rs  main.rs
src/config/: parser.rs
src/render/: renderer.rs
src/window/: event_loop.rs  init.rs  mod.rs
