[package]
name = "galactorian"
version = "0.1.0"
authors = ["ifletsomeclaire <69061963+ifletsomeclaire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "*"
winit = "*"
futures = "*"
wgpu_glyph = "*"
env_logger = "*"
toml = "*"
serde = { version = "*", features = ["derive"]}
cgmath = "*"
bytemuck = "*"
